--- a/HTML/DataAccess/ConfigDataAccessWithConfigs.html
+++ b/HTML/DataAccess/ConfigDataAccessWithConfigs.html
@@ -31,6 +31,7 @@
         Server data provider, OLEDB driver, ODBC driver or MySQL data provider.
       </p>
 
+      <!-- ********** -->
       <h4>DataConfigs File</h4>
       <p>
         DataAccess configuration can be defined externally in file DataConfigs.xml
@@ -62,6 +63,7 @@
         is located.
       </p>
 
+      <!-- ********** -->
       <h4>The Connection String Templates</h4>
       <p>
         This is an example of a ConnectionTemplates.xml file.
@@ -93,6 +95,7 @@
         located.
       </p>
 
+      <!-- ********** -->
       <h4>Retrieve Configuration and Create DataAccess</h4>
       <pre class="code">
 <span class='keyWord'>using</span> LJCDataAccess;
@@ -113,14 +116,18 @@
   <span class='keyWord'>return</span> retValue;
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#DataAccess">HowTo</a>
       / DataConfigs
     </div>
     <br />
-    <div class='SmallText'>Copyright &copy; Lester J. Clark  and Contributors.</div>
-    <div class='SmallText'>Licensed under the MIT License.</div>
+    <div class='SmallText'>
+      Copyright &copy; Lester J. Clark  and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
