--- a/HTML/DataAccess/DataAccessRetrieve.html
+++ b/HTML/DataAccess/DataAccessRetrieve.html
@@ -35,6 +35,7 @@
         class LJCGridDataLib.TableData.
       </p>
 
+      <!-- ********** -->
       <h4>Load Grid Rows from Table</h4>
       <pre class="code">
 <span class='keyWord'>using</span> LJCDataAccess;
@@ -100,6 +101,7 @@
   }
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#DataAccess">HowTo</a>
@@ -107,9 +109,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
