--- a/HTML/GenTextEditor/Data/DataTab.html
+++ b/HTML/GenTextEditor/Data/DataTab.html
@@ -50,6 +50,7 @@
         <a href="DataXML.html">Data XML Example</a>
       </p>
 
+      <!-- ********** -->
       <h4>Data Item Lists</h4>
       <p>
         <a href="Section/SectionList.html">Section List</a>
@@ -61,6 +62,7 @@
         <a href="Replacement/ReplacementList.html">Replacement List</a>
       </p>
     </div>
+    <!--  End Text -->
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
@@ -69,9 +71,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
