--- a/HTML/GenTextEditor/GenTextEditor.html
+++ b/HTML/GenTextEditor/GenTextEditor.html
@@ -31,6 +31,7 @@
         Data together to create the generated output text.
       </p>
 
+      <!-- ********** -->
       <h4>The Feature Tabs</h4>
       <p>
         The GenText Editor contains three Feature Tabs:
@@ -45,19 +46,22 @@
         <a href="Output/OutputTab.html">The Output Tab</a>
       </p>
 
+      <!-- ********** -->
       <h4>The Data Item Lists</h4>
       <p>
         The Data Item Lists are on the Data Tab.
       </p>
     </div>
+    <!--  End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html">HowTo</a>
       / GenTextEditor
     </div>
     <br />
+    <!-- End page -->
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
