--- a/HTML/GenTextEditor/Output/OutputTab.html
+++ b/HTML/GenTextEditor/Output/OutputTab.html
@@ -54,6 +54,7 @@
         <a href="OutputText.html">Output Text</a>
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
@@ -62,9 +63,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
