--- a/HTML/GenTextEditor/Output/OutputText.html
+++ b/HTML/GenTextEditor/Output/OutputText.html
@@ -99,6 +99,7 @@ _se_ "Span End"        = "&lt;span&gt;"</pre>
         The 'Help' menu item displays the context sensitive Help Page.
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
@@ -108,9 +109,10 @@ _se_ "Span End"        = "&lt;span&gt;"</pre>
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
