--- a/HTML/General/AddCustomControls.html
+++ b/HTML/General/AddCustomControls.html
@@ -48,6 +48,7 @@
         Select the file LJCWinFormControls.dll.
       </p>
     </div>
+    <!--  End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#General">HowTo</a>
@@ -55,9 +56,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
