--- a/HTML/General/HowToUseLJCProjects.html
+++ b/HTML/General/HowToUseLJCProjects.html
@@ -25,7 +25,7 @@
       <div id='Title'>How to Use LJCProjects</div>
     </div>
     <div class='Text'>
-
+      <!-- ********** -->
       <h4>Getting the Project Code</h4>
       <p>
         LJCProjects is a GitHub repository of C# Libraries, Utilities and
@@ -116,6 +116,7 @@
         command files used for building the projects.
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#General">HowTo</a>
@@ -123,9 +124,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
