--- a/HTML/ProvinceManager/RetrieveProvince.html
+++ b/HTML/ProvinceManager/RetrieveProvince.html
@@ -47,6 +47,7 @@
   <span class='keyWord'>return</span> retValue;
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
@@ -58,5 +59,6 @@
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
