--- a/HTML/ProvinceManager/SmartDataObject.html
+++ b/HTML/ProvinceManager/SmartDataObject.html
@@ -33,7 +33,7 @@
       <p>
         The changed names can be cleared with the dataObject.ChangedNames.Clear() method.
       </p>
-  <pre class="code">
+      <pre class="code">
 <span class='keyWord'>using</span> System;
 <span class='keyWord'>using</span> LJCDBClientLib;
 <span class='keyWord'>using</span> LJCNetCommon;
@@ -117,6 +117,7 @@
   #endregion
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
@@ -128,5 +129,6 @@
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
