--- a/HTML/ProvinceManager/UpdateProvince.html
+++ b/HTML/ProvinceManager/UpdateProvince.html
@@ -47,6 +47,7 @@
   manager.Update(province, keyColumns);
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
@@ -54,9 +55,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
