--- a/HTML/SQLManager/DataObject.html
+++ b/HTML/SQLManager/DataObject.html
@@ -46,6 +46,7 @@
   <span class='modifier'>public</span> <span class='commonType'>string</span> Abbreviation { <span class='keyWord'>get</span>; <span class='keyWord'>set</span>; }
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#SQLManager">HowTo</a>
@@ -53,9 +54,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
