--- a/HTML/SQLManager/RetrieveWithRowValues.html
+++ b/HTML/SQLManager/RetrieveWithRowValues.html
@@ -82,6 +82,7 @@
   <span class='commonType'>var</span> province = converter.CreateDataFromTable(dataTable);
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#SQLManager">HowTo</a>
@@ -89,9 +90,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
