--- a/HTML/SQLManager/UpdateWithKeys.html
+++ b/HTML/SQLManager/UpdateWithKeys.html
@@ -68,6 +68,7 @@ and column2 = "Something"</pre>
   sqlManager.Update(province, keyColumns, propertyNames);
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#SQLManager">HowTo</a>
@@ -75,9 +76,10 @@ and column2 = "Something"</pre>
     </div>
     <br />
   <div class="SmallText">
-    Copyright &copy Lester J. Clark and Contributors.<br />
+    Copyright &copy; Lester J. Clark and Contributors.<br />
     Licensed under the MIT License.
   </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
