--- a/HTML/DataAccess/GetRowDataObject.html
+++ b/HTML/DataAccess/GetRowDataObject.html
@@ -72,6 +72,7 @@
   }
 }</pre>
     </div>
+    <!--  End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#DataAccess">HowTo</a>
@@ -79,9 +80,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
