--- a/HTML/GenTextEditor/Data/DataXML.html
+++ b/HTML/GenTextEditor/Data/DataXML.html
@@ -101,6 +101,7 @@
   <span class="name"><span class="ltgt">&lt;/</span>Section</span><span class="ltgt">></span>
 <span class="name"><span class="ltgt">&lt;/</span>Sections</span><span class="ltgt">></span></pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
@@ -110,9 +111,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
