--- a/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
+++ b/HTML/GenTextEditor/Data/Replacement/ReplacementDetail.html
@@ -66,6 +66,7 @@
         Displays the context sensitive Help Page.
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../../index.html">Home</a>
       / <a href="../../../Tutorials.html">HowTo</a>
@@ -76,9 +77,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
+    <!-- End page -->
   </div>
 </body>
 </html>
