--- a/HTML/GenTextEditor/Data/Section/SectionDetail.html
+++ b/HTML/GenTextEditor/Data/Section/SectionDetail.html
@@ -57,6 +57,7 @@
         Displays the context sensitive Help Page.
       </p>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../../../index.html">Home</a>
       / <a href="../../../Tutorials.html">HowTo</a>
@@ -67,9 +68,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J Clark and Contributors.<br />
+      Copyright &copy; Lester J Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
