--- a/HTML/ProvinceManager/AddProvince.html
+++ b/HTML/ProvinceManager/AddProvince.html
@@ -35,7 +35,7 @@
 <span class='modifier'>internal</span> <span class='commonType'>void</span> AddProvince(string connectionString, <span class='commonType'>string</span> providerName)
 {
   <span class='commonType'>var</span> manager = <span class='keyWord'>new</span> <span class='userType'>ProvinceSQLManager</span>(null, null, connectionString
-  , providerName);
+    , providerName);
 
   <span class='comment'>// Create the Data Object.</span>
   <span class='commonType'>var</span> province = <span class='keyWord'>new</span> <span class='userType'>Province</span>()
@@ -48,6 +48,7 @@
   <span class='commonType'>var</span> addedID = dbAssignedValues.ID;
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
@@ -55,9 +56,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
