--- a/HTML/ProvinceManager/LoadProvince.html
+++ b/HTML/ProvinceManager/LoadProvince.html
@@ -62,6 +62,7 @@
   }
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#ProvinceManager">HowTo</a>
@@ -69,9 +70,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
