--- a/HTML/SQLManager/Retrieve.html
+++ b/HTML/SQLManager/Retrieve.html
@@ -91,6 +91,7 @@ See the Technical Documentation for more information.</pre>
   <span class='keyWord'>return</span> retValue;
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#SQLManager">HowTo</a>
@@ -98,9 +99,10 @@ See the Technical Documentation for more information.</pre>
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
