--- a/HTML/SQLManager/UpdateWithFilters.html
+++ b/HTML/SQLManager/UpdateWithFilters.html
@@ -63,6 +63,7 @@
   sqlManager.Update(province, <span class='keyWord'>null</span>, propertyNames, filters);
 }</pre>
     </div>
+    <!-- End Text -->
     <div class="PathText">
       / <a href="../../index.html">Home</a>
       / <a href="../Tutorials.html#SQLManager">HowTo</a>
@@ -70,9 +71,10 @@
     </div>
     <br />
     <div class="SmallText">
-      Copyright &copy Lester J. Clark and Contributors.<br />
+      Copyright &copy; Lester J. Clark and Contributors.<br />
       Licensed under the MIT License.
     </div>
   </div>
+  <!-- End page -->
 </body>
 </html>
