--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -108,6 +108,9 @@
       <p>
         <a href="GenTextEditor/GenTextEditor.html">GenText Editor</a>
       </p>
+      <p>
+        <a href="ViewEditor/ViewEdit.html">View Editor</a>
+      </p>
     </div>
     <div class="PathText">
       / <a href="../index.html">Home</a>
