--- a/HTML/ViewEditor/2View/ViewDetail.html
+++ b/HTML/ViewEditor/2View/ViewDetail.html
@@ -16,6 +16,7 @@
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="ViewList.html">View List</a>
       / ViewDetail
     </div>
     <br />
@@ -76,6 +77,7 @@
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
       / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="ViewList.html">View List</a>
       / ViewDetail
     </div>
     <br />
