--- a/HTML/ViewEditor/4Join/JoinColumnDetail.html
+++ b/HTML/ViewEditor/4Join/JoinColumnDetail.html
@@ -15,7 +15,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="JoinColumnList.html">JoinColumnList</a>
       / JoinColumnDetail
     </div>
     <br />
@@ -90,7 +91,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="JoinColumnList.html">JoinColumnList</a>
       / JoinColumnDetail
     </div>
     <br />
