--- a/HTML/ViewEditor/6OrderBy/OrderByDetail.html
+++ b/HTML/ViewEditor/6OrderBy/OrderByDetail.html
@@ -15,7 +15,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="OrderByList.html">OrderByList</a>
       / OrderByDetail
     </div>
     <br />
@@ -65,7 +66,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="OrderByList.html">OrderByList</a>
       / OrderByDetail
     </div>
     <br />
