--- a/HTML/ViewEditor/3Column/ColumnDetail.html
+++ b/HTML/ViewEditor/3Column/ColumnDetail.html
@@ -15,7 +15,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="ColumnList.html">ColumnList</a>
       / ColumnDetail
     </div>
     <br />
@@ -94,7 +95,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="ColumnList.html">ColumnList</a>
       / ColumnDetail
     </div>
     <br />
