--- a/HTML/ViewEditor/4Join/JoinDetail.html
+++ b/HTML/ViewEditor/4Join/JoinDetail.html
@@ -15,7 +15,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="JoinList.html">JoinList</a>
       / JoinDetail
     </div>
     <br />
@@ -86,7 +87,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="JoinList.html">JoinList</a>
       / JoinDetail
     </div>
     <br />
