--- a/HTML/ViewEditor/5Filter/ConditionDetail.html
+++ b/HTML/ViewEditor/5Filter/ConditionDetail.html
@@ -15,7 +15,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="ConditionList.html">ConditionList</a>
       / ConditionDetail
     </div>
     <br />
@@ -82,7 +83,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="ConditionList.html">ConditionList</a>
       / ConditionDetail
     </div>
     <br />
