--- a/HTML/ViewEditor/5Filter/ConditionSetDetail.html
+++ b/HTML/ViewEditor/5Filter/ConditionSetDetail.html
@@ -15,7 +15,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="ConditionSetList.html">ConditionSetList</a>
       / ConditionSetDetail
     </div>
     <br />
@@ -66,7 +67,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="ConditionSetList.html">ConditionSetList</a>
       / ConditionSetDetail
     </div>
     <br />
