--- a/HTML/ViewEditor/5Filter/FilterDetail.html
+++ b/HTML/ViewEditor/5Filter/FilterDetail.html
@@ -15,7 +15,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="FilterList.html">FilterList</a>
       / FilterDetail
     </div>
     <br />
@@ -70,7 +71,8 @@
     <div class="PathText">
       / <a href="../../../index.html">Home</a>
       / <a href="../../Tutorials.html">HowTo</a>
-      / <a href="../ViewEdit.html">View Editor</a>
+      / <a href="../ViewEdit.html">ViewEditor</a>
+      / <a href="FilterList.html">FilterList</a>
       / FilterDetail
     </div>
     <br />
