HowTo ViewEditor Updates

--- a/HTML/ViewEditor/2View/ViewDetail.html
+++ b/HTML/ViewEditor/2View/ViewDetail.html
@@ -28,6 +28,7 @@
         The View Detail dialog allows the user to create and edit
         View entries.
       </p>
+      <img src="ViewDetail.jpg" alt="View Detail" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Form Controls</div>
