--- a/HTML/ViewEditor/3Column/ColumnDetail.html
+++ b/HTML/ViewEditor/3Column/ColumnDetail.html
@@ -28,6 +28,7 @@
         The Column Detail dialog allows the user to create and edit
         Column entries.
       </p>
+      <img src="ColumnDetail.jpg" alt="Column Detail" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Form Controls</div>
