--- a/HTML/ViewEditor/4Join/JoinOnDetail.html
+++ b/HTML/ViewEditor/4Join/JoinOnDetail.html
@@ -28,6 +28,7 @@
         The JoinOn Detail dialog allows the user to create and edit
         JoinOn entries.
       </p>
+      <img src="JoinOnDetail.jpg" alt="JoinOn Detail" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Form Controls</div>
