--- a/HTML/ViewEditor/5Filter/ConditionDetail.html
+++ b/HTML/ViewEditor/5Filter/ConditionDetail.html
@@ -28,6 +28,7 @@
         The Condition Detail dialog allows the user to create and edit
         Condition entries.
       </p>
+      <img src="ConditionDetail.jpg" alt="Condition Detail" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Form Controls</div>
