--- a/HTML/ViewEditor/5Filter/ConditionSetDetail.html
+++ b/HTML/ViewEditor/5Filter/ConditionSetDetail.html
@@ -28,6 +28,7 @@
         The ConditionSet Detail dialog allows the user to create and edit
         ConditionSet entries.
       </p>
+      <img src="ConditionSetDetail.jpg" alt="ConditionSet Detail" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Form Controls</div>
