--- a/HTML/ViewEditor/5Filter/FilterDetail.html
+++ b/HTML/ViewEditor/5Filter/FilterDetail.html
@@ -28,6 +28,7 @@
         The Filter Detail dialog allows the user to create and edit
         Filter entries.
       </p>
+      <img src="FilterDetail.jpg" alt="Filter Detail" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Form Controls</div>
