--- a/HTML/ViewEditor/6OrderBy/OrderByDetail.html
+++ b/HTML/ViewEditor/6OrderBy/OrderByDetail.html
@@ -28,6 +28,7 @@
         The OrderBy Detail dialog allows the user to create and edit
         OrderBy entries.
       </p>
+      <img src="OrderByDetail.jpg" alt="OrderBy Detail" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Form Controls</div>
