--- a/HTML/ViewEditor/4Join/JoinDetail.html
+++ b/HTML/ViewEditor/4Join/JoinDetail.html
@@ -32,6 +32,7 @@
         The View List is populated with the defined View names when the Table name
         is selected from the Table Dropdown list
       </p>
+      <img src="JoinDetail.jpg" alt="Join Detail" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Form Controls</div>
