HowTo ViewEditor Updates

--- a/HTML/ViewEditor/2View/ViewList.html
+++ b/HTML/ViewEditor/2View/ViewList.html
@@ -28,6 +28,7 @@
         The View List contains the Views for the selected Data Source and Table.
         Views can be added, edited and deleted from this list.
       </p>
+      <img src="ViewList.jpg" alt="View List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
