--- a/HTML/ViewEditor/3Column/ColumnList.html
+++ b/HTML/ViewEditor/3Column/ColumnList.html
@@ -29,6 +29,7 @@
         The Column List contains the Columns for the selected View. Columns can be
         added, edited and deleted from this list.
       </p>
+      <img src="ColumnList.jpg" alt="Column List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
