--- a/HTML/ViewEditor/4Join/JoinColumnList.html
+++ b/HTML/ViewEditor/4Join/JoinColumnList.html
@@ -29,6 +29,7 @@
         The Join Column List contains the Join Columns for the selected Join. Join
         Columns can be added, edited and deleted from this list.
       </p>
+      <img src="JoinColumnList.jpg" alt="JoinColumn List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
