--- a/HTML/ViewEditor/4Join/JoinList.html
+++ b/HTML/ViewEditor/4Join/JoinList.html
@@ -33,6 +33,7 @@
         The Join Tab also contains the JoinOn and Join Column tabs. Each contains
         a list for the items associated with the selected Join.
       </p>
+      <img src="JoinList.jpg" alt="Join List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
