--- a/HTML/ViewEditor/4Join/JoinOnList.html
+++ b/HTML/ViewEditor/4Join/JoinOnList.html
@@ -28,6 +28,7 @@
         The JoinOn List contains the JoinOns for the selected Join. JoinOns can be
         added, edited and deleted from this list.
       </p>
+      <img src="JoinOnList.jpg" alt="JoinOn List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
