--- a/HTML/ViewEditor/5Filter/ConditionList.html
+++ b/HTML/ViewEditor/5Filter/ConditionList.html
@@ -29,6 +29,7 @@
         The Condition List contains the Conditions for the selected Filter.
         Conditions can be added, edited and deleted from this list.
       </p>
+      <img src="ConditionList.jpg" alt="Condition List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
