--- a/HTML/ViewEditor/5Filter/FilterList.html
+++ b/HTML/ViewEditor/5Filter/FilterList.html
@@ -33,6 +33,7 @@
         The Filter Tab also contains the ConditionSet and Condition tabs. Each
         contains a list for the items associated with the selected Filter.
       </p>
+      <img src="FilterList.jpg" alt="Filter List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
