--- a/HTML/ViewEditor/6OrderBy/OrderByList.html
+++ b/HTML/ViewEditor/6OrderBy/OrderByList.html
@@ -29,6 +29,7 @@
         The OrderBy List contains the OrderBy columns for the selected View.
         OrderBy Columns can be added, edited and deleted from this list.
       </p>
+      <img src="OrderByList.jpg" alt="OrderBy List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
