--- a/HTML/ViewEditor/5Filter/ConditionSetList.html
+++ b/HTML/ViewEditor/5Filter/ConditionSetList.html
@@ -29,6 +29,7 @@
         The ConditionSet List contains the ConditionSet for the selected Filter.
         a ConditionSet can be added, edited and deleted from this list.
       </p>
+      <img src="ConditionSetList.jpg" alt="ConditionSet List" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
