HowTo ViewEditor Updates

--- a/HTML/ViewEditor/1DataSelection/DataConfig.html
+++ b/HTML/ViewEditor/1DataSelection/DataConfig.html
@@ -31,6 +31,7 @@
     The Table Dropdown list is populated with the Data Source Table names when
     the Data Config name is selected from the Data Config Dropdown list
   </p>
+  <img src="DataConfig.jpg" alt="DataConfig Dropdown" width="300" />
   <p>
     The DataConfig.xml file definitions are used to connect to the available
     Data Sources. It uses the following layout.
