--- a/HTML/ViewEditor/1DataSelection/Table.html
+++ b/HTML/ViewEditor/1DataSelection/Table.html
@@ -31,6 +31,7 @@
         The View List is populated with the defined View names when the Table name
         is selected from the Table Dropdown list
       </p>
+      <img src="Table.jpg" alt="Table Dropdown" width="300" />
 
       <!-- ********** -->
       <div class="Heading2">Context Menu</div>
