--- a/HTML/Tutorials.html
+++ b/HTML/Tutorials.html
@@ -111,6 +111,9 @@
       <p>
         <a href="ViewEditor/ViewEdit.html">View Editor</a>
       </p>
+      <p>
+        <a href="GenDocEditor/GenDocEdit.html">GenDoc Editor</a>
+      </p>
     </div>
     <div class="PathText">
       / <a href="../index.html">Home</a>
