--- a/HTML/GenDocEditor/Method/MethodGroupDetail.html
+++ b/HTML/GenDocEditor/Method/MethodGroupDetail.html
@@ -1,66 +1,107 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Copyright(c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- MethodGroupDetail.html -->
+<!-- MethodGroupDetail.cs -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
   <title>Method Group Detail</title>
+  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <h3 style="color:blue">Method Group Detail Dialog</h3>
-  <p>
-    The Method Group Detail dialog allows the user to create and edit
-    Method Group entries.
-  </p>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodGroupList.html">MethodGroupList</a>
+      / MethodGroupDetail
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>The Method Group Detail Dialog</div>
+    </div>
+    <p>
+      <img src="MethodGroupDetail.jpg" alt="Method Group Detail" width="300" />
+    </p>
+    <div class='Text'>
+      <p>
+        The Method Group Detail dialog allows the user to create and edit
+        Method Group entries.
+      </p>
+      <img src="MethodGroupDetail.jpg" alt="Method Group Detail" width="300" />
 
-  <h3>Form Controls</h3>
-  <b>Class Item Name</b>
-  <p>
-    The read-only text that shows the Class which contains the methods in this
-    group.
-  </p>
-  <b>Method Group Name</b>
-  <p>
-    The unique item identifier.
-  </p>
-  <b>Class Group Button</b>
-  <p>
-    The Method Group Button appears to the right of the Method Group Name. It
-    displays the Method Group List for selecting an existing group.
-  </p>
-  <b>Heading</b>
-  <p>
-    The item heading text.
-  </p>
-  <p>
-    When an existing group is selected, this text is read-only and contains
-    the existing group heading.
-  </p>
-  <b>Custom Heading</b>
-  <p>
-    The item custom heading text overrides the selected heading text.
-  </p>
-  <b>Sequence</b>
-  <p>
-    The item sequence.
-  </p>
-  <b>Active</b>
-  <p>
-    The CheckBox that indicates this item documentation will be generated.
-  </p>
-  <b>OK Button</b>
-  <p>
-    Saves the entered data and exits the dialog.
-  </p>
-  <b>Cancel Button</b>
-  <p>
-    Exits the dialog without saving the entered data.
-  </p>
-  <h6>
-    MethodGroupDetail<br />
-    Copyright (c) Lester J Clark and Contributors.<br />
-    Licensed under the MIT License.
-  </h6>
+      <div class="Heading2">Form Controls</div>
+      <h4>Class Item Name</h4>
+      <p>
+        The read-only text that shows the Class which contains the methods in this
+        group.
+      </p>
+      <h4>Method Group Name</h4>
+      <p>
+        The unique item identifier.
+      </p>
+      <h4>Class Group Button</h4>
+      <p>
+        The Method Group Button appears to the right of the Method Group Name. It
+        displays the Method Group List for selecting an existing group.
+      </p>
+      <h4>Heading</h4>
+      <p>
+        The item heading text.
+      </p>
+      <p>
+        When an existing group is selected, this text is read-only and contains
+        the existing group heading.
+      </p>
+      <h4>Custom Heading</h4>
+      <p>
+        The item custom heading text overrides the selected heading text.
+      </p>
+      <h4>Sequence</h4>
+      <p>
+        The item sequence.
+      </p>
+      <h4>Active</h4>
+      <p>
+        The CheckBox that indicates this item documentation will be generated.
+      </p>
+      <h4>OK Button</h4>
+      <p>
+        Saves the entered data and exits the dialog.
+      </p>
+      <h4>Cancel Button</h4>
+      <p>
+        Exits the dialog without saving the entered data.
+      </p>
+
+      <div class="Heading2">Context Menu</div>
+      <p>
+        The Context Menu can be displayed by clicking the right mouse button on a
+        place in the dialog that does not contain a control item.
+      </p>
+      <h4>Help</h4>
+      <p>
+        Displays the context sensitive Help Page.
+      </p>
+    </div>
+    <!-- End Text -->
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodGroupList.html">MethodGroupList</a>
+      / MethodGroupDetail
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
+    <!-- End page -->
+  </div>
 </body>
 </html>
