--- a/HTML/GenDocEditor/Assembly/AssemblyItemDetail.html
+++ b/HTML/GenDocEditor/Assembly/AssemblyItemDetail.html
@@ -1,70 +1,111 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Copyright(c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- AssemblyItemDetail.html -->
+<!-- AssemblyItemDetail.cs -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
   <title>Assembly Item Detail</title>
+  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <h3 style="color:blue">Assembly Item Detail Dialog</h3>
-  <p>
-    The Assembly Item Detail dialog allows the user to create and edit
-    assembly item entries.
-  </p>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="AssemblyTab.html">AssemblyTab</a>
+      / <a href="AssemblyItemList.html">AssemblyItemList</a>
+      / AssemblyItemDetail
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>The Assembly Item Detail Dialog</div>
+    </div>
+    <p>
+      <img src="AssemblyItemDetail.jpg" alt="Assembly Item Detail" width="300" />
+    </p>
+    <div class='Text'>
+      <p>
+        The Assembly Item Detail dialog allows the user to create and edit
+        assembly item entries.
+      </p>
+      <img src="AssemblyItemDetail.jpg" alt="Assembly Item Detail" width="300" />
 
-  <h3>Form Controls</h3>
-  <b>Assembly Group</b>
-  <p>
-    The read-only text that shows the parent item description.
-  </p>
-  <b>Name</b>
-  <p>
-    The unique item identifier.
-  </p>
-  <b>Description</b>
-  <p>
-    The item description text.
-  </p>
-  <b>Doc File</b>
-  <p>
-    The compiler generated documentation file path.
-  </p>
-  <b>Doc File Button</b>
-  <p>
-    The Doc File Button appears to the right of the Doc File path text. It
-    displays the File Selection dialog for selecting the documentation file.
-  </p>
-  <b>Image</b>
-  <p>
-    Path to the image that will display on the Assembly Documentation page.
-  </p>
-  <b>Image Button</b>
-  <p>
-    The Image Button appears to the right of the Image path text. It displays
-    the File Selection dialog for selecting the image file.
-  </p>
-  <b>Sequence</b>
-  <p>
-    The item sequence.
-  </p>
-  <b>Active</b>
-  <p>
-    The CheckBox that indicates this item documentation will be generated.
-  </p>
-  <b>OK Button</b>
-  <p>
-    Saves the entered data and exits the dialog.
-  </p>
-  <b>Cancel Button</b>
-  <p>
-    Exits the dialog without saving the entered data.
-  </p>
-  <h6>
-    AssemblyItemDetail<br />
-    Copyright (c) Lester J Clark and Contributors.<br />
-    Licensed under the MIT License.
-  </h6>
+      <div class="Heading2">Form Controls</div>
+      <h4>Assembly Group</h4>
+      <p>
+        The read-only text that shows the parent item description.
+      </p>
+      <h4>Name</h4>
+      <p>
+        The unique item identifier.
+      </p>
+      <h4>Description</h4>
+      <p>
+        The item description text.
+      </p>
+      <h4>Doc File</h4>
+      <p>
+        The compiler generated documentation file path.
+      </p>
+      <h4>Doc File Button</h4>
+      <p>
+        The Doc File Button appears to the right of the Doc File path text. It
+        displays the File Selection dialog for selecting the documentation file.
+      </p>
+      <h4>Image</h4>
+      <p>
+        Path to the image that will display on the Assembly Documentation page.
+      </p>
+      <h4>Image Button</h4>
+      <p>
+        The Image Button appears to the right of the Image path text. It displays
+        the File Selection dialog for selecting the image file.
+      </p>
+      <h4>Sequence</h4>
+      <p>
+        The item sequence.
+      </p>
+      <h4>Active</h4>
+      <p>
+        The CheckBox that indicates this item documentation will be generated.
+      </p>
+      <h4>OK Button</h4>
+      <p>
+        Saves the entered data and exits the dialog.
+      </p>
+      <h4>Cancel Button</h4>
+      <p>
+        Exits the dialog without saving the entered data.
+      </p>
+
+      <div class="Heading2">Context Menu</div>
+      <p>
+        The Context Menu can be displayed by clicking the right mouse button on a
+        place in the dialog that does not contain a control item.
+      </p>
+      <h4>Help</h4>
+      <p>
+        Displays the context sensitive Help Page.
+      </p>
+    </div>
+    <!-- End Text -->
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="AssemblyTab.html">AssemblyTab</a>
+      / <a href="AssemblyItemList.html">AssemblyItemList</a>
+      / AssemblyItemDetail
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
+    <!-- End page -->
+  </div>
 </body>
 </html>
