--- a/HTML/GenDocEditor/Method/MethodItemDetail.html
+++ b/HTML/GenDocEditor/Method/MethodItemDetail.html
@@ -1,56 +1,97 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- Copyright(c) Lester J. Clark and Contributors. -->
 <!-- Licensed under the MIT License. -->
-<!-- MethodItemDetail.html -->
+<!-- MethodItemDetail.cs -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8" />
   <title>Method Item Detail</title>
+  <link rel='stylesheet' type='text/css' href='../../../CSS/CodeDoc.css' />
 </head>
 <body>
-  <h3 style="color:blue">Method Item Detail Dialog</h3>
-  <p>
-    The Method Item Detail dialog allows the user to create and edit
-    Method item entries.
-  </p>
+  <div class="page">
+    <br />
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodItemList.html">MethodItemList</a>
+      / MethodItemDetail
+    </div>
+    <br />
+    <div id='Header'>
+      <div id='Title'>The Method Item Detail Dialog</div>
+    </div>
+    <p>
+      <img src="MethodItemDetail.jpg" alt="Method Item Detail" width="300" />
+    </p>
+    <div class='Text'>
+      <p>
+        The Method Item Detail dialog allows the user to create and edit
+        Method item entries.
+      </p>
+      <img src="MethodItemDetail.jpg" alt="Method Item Detail" width="300" />
 
-  <h3>Form Controls</h3>
-  <b>Class Item Name</b>
-  <p>
-    The read-only text that shows the Class which contains this method.
-  </p>
-  <b>Method Group</b>
-  <p>
-    The read-only text that shows the parent item description.
-  </p>
-  <b>Name</b>
-  <p>
-    The Method name.
-  </p>
-  <b>Description</b>
-  <p>
-    The item description text.
-  </p>
-  <b>Sequence</b>
-  <p>
-    The item sequence.
-  </p>
-  <b>Active</b>
-  <p>
-    The CheckBox that indicates this item documentation will be generated.
-  </p>
-  <b>OK Button</b>
-  <p>
-    Saves the entered data and exits the dialog.
-  </p>
-  <b>Cancel Button</b>
-  <p>
-    Exits the dialog without saving the entered data.
-  </p>
-  <h6>
-    MethodItemDetail<br />
-    Copyright (c) Lester J Clark and Contributors.<br />
-    Licensed under the MIT License.
-  </h6>
+      <div class="Heading2">Form Controls</div>
+      <h4>Class Item Name</h4>
+      <p>
+        The read-only text that shows the Class which contains this method.
+      </p>
+      <h4>Method Group</h4>
+      <p>
+        The read-only text that shows the parent item description.
+      </p>
+      <h4>Name</h4>
+      <p>
+        The Method name.
+      </p>
+      <h4>Description</h4>
+      <p>
+        The item description text.
+      </p>
+      <h4>Sequence</h4>
+      <p>
+        The item sequence.
+      </p>
+      <h4>Active</h4>
+      <p>
+        The CheckBox that indicates this item documentation will be generated.
+      </p>
+      <h4>OK Button</h4>
+      <p>
+        Saves the entered data and exits the dialog.
+      </p>
+      <h4>Cancel Button</h4>
+      <p>
+        Exits the dialog without saving the entered data.
+      </p>
+
+      <div class="Heading2">Context Menu</div>
+      <p>
+        The Context Menu can be displayed by clicking the right mouse button on a
+        place in the dialog that does not contain a control item.
+      </p>
+      <h4>Help</h4>
+      <p>
+        Displays the context sensitive Help Page.
+      </p>
+    </div>
+    <!-- End Text -->
+    <div class="PathText">
+      / <a href="../../../index.html">Home</a>
+      / <a href="../../Tutorials.html">HowTo</a>
+      / <a href="../GenDocEdit.html">GenDocEditor</a>
+      / <a href="MethodTab.html">MethodTab</a>
+      / <a href="MethodItemList.html">MethodItemList</a>
+      / MethodItemDetail
+    </div>
+    <br />
+    <div class="SmallText">
+      Copyright &copy; Lester J Clark and Contributors.<br />
+      Licensed under the MIT License.
+    </div>
+    <!-- End page -->
+  </div>
 </body>
 </html>
